--- a/templates/post.template.html
+++ b/templates/post.template.html
@@ -3,13 +3,17 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<title><!-- TITLE --></title>
+		<title>
+				<-- TITLE -->
+		</title>
 		<link rel="stylesheet" href="/dist/css/style.css" type="text/css" media="all">
 	</head>
 	<body>
-		<h2><!-- TITLE --></h2>
+		<h2>
+				<-- TITLE -->
+		</h2>
 		<article>
-		<!-- POST -->
+				<-- POST -->
 		</article>
 		<footer>
 			<a href="/contact.html">Contact me</a> | <a href="/list.html">List of posts</a> | <a href="/all.html">All posts</a>
