--- a/templates/list.template.html
+++ b/templates/list.template.html
@@ -12,7 +12,7 @@
 			<!-- POSTS -->
 		</ul>
 		<footer>
-			<a href="/contact.html">Contact me</a> | <a href="/list.html">List of posts</a> | <a href="/all.html">All posts</a>
+			<a href="/contact.html">Contact me</a> | <a href="/list.html">List of posts</a> | <a href="/rss.xml">RSS feed</a>
 		</footer>
 	</body>
 </html>
